src/objects/IAD_API_Base_URL__mdt.object
<CustomObject>
    <fields>
        <fullName>App_Id__c</fullName>
        <label>App Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Base_URL__c</fullName>
        <label>Box Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClientID_SecurityKey__c</fullName>
        <label>ClientID_SecurityKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAD_API_Base_URL__c</fullName>
        <label>IAD API Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <label>link</label>
        <type>Url</type>
    </fields>
    <label>IAD API Base URL</label>
    <pluralLabel>IAD API Base URLs</pluralLabel>
</CustomObject>